# data_patterns_matcher

./: CMakeLists.txt  README.md
code/: CMakeLists.txt
code/BusinessLogic/: CMakeLists.txt  main.cpp
code/BusinessLogic/IModule/inc/: IModule.h
code/BusinessLogic/IModule/src/: IModule.cpp
code/BusinessLogic/PatternsMatcherModules/: CMakeLists.txt
code/BusinessLogic/PatternsMatcherModules/inc/: ArrayGenerator.h  DataRecorder.h  PatternMatcher.h
code/BusinessLogic/PatternsMatcherModules/src/: ArrayGenerator.cpp  DataRecorder.cpp  PatternMatcher.cpp
code/UnitTests/: AllTests.cpp  CMakeLists.txt
code/UnitTests/DataPatternsMatcher/: ArrayGeneratorTests.cpp  DataRecordertests.cpp  IModuleMock.h  PatternMatcherTests.cpp
